vw overflow bug fixed.

--- a/Frontend/src/css/style.css
+++ b/Frontend/src/css/style.css
@@ -128,7 +128,7 @@ footer a {
   position: absolute;
   left: 0;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.926);
   display: flex;
